Moved filter bar into well. Beginning to add CSS for styling. Fixed z-index between air/class/fare filter well and the sliders.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,6 +285,13 @@ ul.tabs li a.active {
 	display: none;
 }
 
+.filtertimeselection {
+	margin: 2em 0;
+	position: relative;
+	z-index: 1;
+	display: none;
+}
+
 .filter .navbar-inner {
 	padding-left: 2px;
 	padding-right: 2px;
